2025-05-30  Rubén Rubio  <rubenrub@ucm.es>

	* tests/ResolvedBugs/stratToExprNotValidMay2025.maude:
	added

2025-05-06  Saruman the White  <eker@eker10>

	* tests/ResolvedBugs/viewInstantiationByTheoryViewApril2025.maude:
	added

2025-05-05  Saruman the White  <eker@eker10>

	* tests/ResolvedBugs/viewInstantiationAwkwardCaseApril2025.maude:
	added

	* tests/ResolvedBugs/viewInstantiationByModuleViewApril2025.maude:
	added

2025-02-28  Rubén Rubio  <rubenrub@ucm.es>

	* configure.ac: autoupdate applied

2024-06-05  Steven Eker  <eker@eker10>

	* INSTALL: added GNU automake to prerequisites

==================================Maude163===========================================

2024-05-30  Steven Eker  <eker@pup>

	* tests/Misc/narrow2.maude: added

==================================Maude162===========================================

2024-04-16  Steven Eker  <eker@pup>

	* tests/BuiltIn/stringOps.maude: added

2024-04-08  Steven Eker  <eker@pup>

	* tests/Misc/initialEqualityPredicate.maude: added more examples

2024-04-01  Steven Eker  <eker@pup>

	* INSTAL: remove refs to gmp-6.2.1

	* tests/ResolvedBugs/stringToRatConversionMarch2024.maude: added

2024-03-19  Steven Eker  <eker@pup>

	* INSTALL: update GMP section on the register x18 issue

==================================Maude160===========================================

2024-03-19  Steven Eker  <eker@pup>

	* README.md: updated web links


2024-03-13  Steven Eker  <eker@pup>

	* README.md: added Maude 3.4 details

==================================Maude159===========================================

2024-02-27  Steven Eker  <eker@pup>

	* tests/Corner/operatorNames.maude: added ops/msgs examples

2024-02-23  Steven Eker  <eker@pup>

	* tests/Corner/operatorNames.maude: added tests for op-hooks

2024-02-20  Steven Eker  <eker@pup>

	* tests/Corner/operatorNames.maude: added example to illstrate op
	in from theory of a view

2024-02-19  Steven Eker  <eker@pup>

	* tests/Corner/operatorNames.maude: added
